<resources>
    <string name="app_name">AndroidFundamentals</string>
    <string name="this_is_my_first_textview">This is my first TextView</string>
    <string name="i_am_a_button">I am a button</string>
    <string name="add_your_email_address">Add  your email address</string>
    <string name="i_accept_to_learn_android">I accept to learn Android</string>
    <string name="notifications">Notifications</string>
    <string name="this_is_a_searchview">This is a searchView</string>
    <string name="hello_from_java">Hello from Java code :)</string>
    <string name="please_enter_an_email_address">Please enter an email address</string>
    <string name="start_second_activity">Start second Activity</string>
    <string name="call_implicit_intent">Call implicit intent</string>
    <string name="label_yes">yes</string>
    <string name="label_no">no</string>
    <string name="label_login">LOGIN</string>
    <string name="label_email">Email</string>
    <string name="label_phone">Phone</string>
    <string name="label_submit">SUBMIT</string>
    <string name="label_terms_and_conditions">I accept Terms and Conditions</string>
    <string name="long_text_for_scroll">What is Lorem Ipsum? \n "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem" +
                " Ipsum has been the industry's standard dummy text ever since the 1500s, when an" +
                " unknown printer took a galley of type and scrambled it to make a type specimen " +
                "book. It has survived not only five centuries, but also the leap into electronic" +
                " typesetting, remaining essentially unchanged. It was popularised in the 1960s " +
                "with the release of Letraset sheets containing Lorem Ipsum passages, and more " +
                "recently with desktop publishing software like Aldus PageMaker including " +
                "versions of Lorem Ipsum.\n" +
                "\n" +
                "Why do we use it?\n" +
                "It is a long established fact that a reader will be distracted by the readable " +
                "content of a page when looking at its layout. The point of using Lorem Ipsum is " +
                "that it has a more-or-less normal distribution of letters, as opposed to using " +
                "'Content here, content here', making it look like readable English. Many desktop" +
                " publishing packages and web page editors now use Lorem Ipsum as their default " +
                "model text, and a search for 'lorem ipsum' will uncover many web sites still in " +
                "their infancy. Various versions have evolved over the years, sometimes by " +
                "accident, sometimes on purpose (injected humour and the like).\n" +
                "\n" +
                "\n" +
                "Where does it come from?\n" +
                "Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots " +
                "in a piece of classical Latin literature from 45 BC, making it over 2000 years " +
                "old. Richard McClintock, a Latin professor at Hampden-Sydney College in " +
                "Virginia, looked up one of the more obscure Latin words, consectetur, from a " +
                "Lorem Ipsum passage, and going through the cites of the word in classical " +
                "literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1" +
                ".10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good " +
                "and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of " +
                "ethics, very popular during the Renaissance. The first line of Lorem Ipsum, " +
                "\"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.\n" +
                "\n" +
                "The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for " +
                "those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et " +
                "Malorum\" by Cicero are also reproduced in their exact original form, " +
                "accompanied by English versions from the 1914 translation by H. Rackham.\n" +
                "\n" +
                "Where can I get some?\n" +
                "There are many variations of passages of Lorem Ipsum available, but the majority" +
                " have suffered alteration in some form, by injected humour, or randomised words " +
                "which don't look even slightly believable. If you are going to use a passage of " +
                "Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the" +
                " middle of text. All the Lorem Ipsum generators on the Internet tend to repeat " +
                "predefined chunks as necessary, making this the first true generator on the " +
                "Internet. It uses a dictionary of over 200 Latin words, combined with a handful " +
                "of model sentence structures, to generate Lorem Ipsum which looks reasonable. " +
                "The generated Lorem Ipsum is therefore always free from repetition, injected " +
                "humour, or non-characteristic words etc."</string>
    <string name="label_message_received">Message received</string>
    <string name="hint_name">Name</string>
    <string name="hint_send_message">Send message</string>
    <string name="label_checkbox">CheckBox</string>
    <string name="label_button">Button</string>
    <string name="hint_edit_text_name">Name</string>
    <string name="label_debug_activity">Debug Activity</string>
    <string name="start_activity_for_result_example">Start Activity For Results</string>
    <string name="label_show_status">Show status</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="ic_item_communicate">Communicate</string>
    <string name="sum">SUM</string>
    <string name="send_data_to_fragment_with_listener">send data to fragment with listener</string>
    <string name="title_activity_navigation_template">NavigationTemplateActivity</string>
    <string name="display_datepicker">Display Date picker</string>
    <string name="display_timepicker">Display Time picker</string>
    <string name="display_alert_dialog_with_buttons">Display alert dialog with buttons</string>
    <string name="permission_activity">Permission activity</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="collapsing_toolbar">Colapsing toolbar</string>
    <string name="week_2">week 2</string>
    <string name="week_3_login">week3 Login</string>
    <string name="week_3_spinner">week 3 Spinner</string>
    <string name="week_3_viewgroup">week 3 View Group</string>
    <string name="week_3_webview">week 3 Web View</string>
    <string name="week_4_recyclerview">week 4 Recycler View</string>
    <string name="week_4_constraintlayout">week 4 Constraint Layout</string>
    <string name="week_5_first_activity">week 5 First Activity</string>
    <string name="week_5_first_activity_for_result">Week 5 First Activity for Results</string>
    <string name="week_6_fragment_in_activity">Week 6 Fragment In Activity</string>
    <string name="week_6_length_activity">week 6 Length Activity</string>
    <string name="week_6_sum_activity">Week 6 Sum Activity</string>
    <string name="week_6_tabs">Week 6 Tabs</string>
    <string name="week_6_navigation_activity">Week 6 Navigation Activity</string>
    <string name="week_7_material_design">Week 7 Material Design</string>
    <string name="retrofit_using_github_api">Week 8 Retrofit Using Github Api</string>
    <string name="google_auth">Week 8 Google Auth</string>
    <string name="main_activity">Main Activity</string>
    <string name="get_image">Take photo</string>
    <string name="notification_title">notification</string>
    <string name="notification_message">notification message</string>
    <string name="ticker_text">ticker text</string>
    <string name="services_activity">Services Activity</string>
    <string name="notice">Notice</string>
    <string name="alert_title">Alert Title</string>
    <string name="launch_app">Launch app...</string>
    <string name="reminde_me">remind me</string>
    <string name="cancel">cancel</string>
    <string name="click">click</string>
    <string name="retry_message">retry</string>
</resources>