<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/general_padding"
    tools:context=".MainActivity">
<!--orientation - implicit e horizontal-->

    <TextView
        android:id="@+id/text_view_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_padding"
        android:background="@color/colorAccent"
        android:ellipsize="end"
        android:padding="@dimen/general_padding"
        android:text="@string/this_is_my_first_textview"
        android:textSize="23sp"
        android:textStyle="italic" />

    <!-- ellipsize - in cazul in care textul este prea lung pentru a fi afisat
     vor fi puse ... la inceput, mijloc sau sfarsit in functie de valoarea lui
     ellpisize-->

    <ImageView
        android:id="@+id/image_view_android"
        android:layout_width="wrap_content"
        android:layout_height="120dip"
        android:scaleType="fitCenter"
        android:src="@drawable/android"
        tools:ignore="contentDescription"/>

    <!-- scaleType - tip de scalare al imaginii si de pozitionare-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/general_padding"
        android:onClick="btnHelloOnClick"
        android:text="@string/i_am_a_button"
        android:textColor="@android:color/white" />

    <!-- padding - marginea interioara a elementului
    margin este marginea comuna
    onClick - comportamentul care se apeleaza la apasarea butonului
    -->

    <View
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:layout_margin="@dimen/general_margin"
        android:background="@color/colorAccent"/>

    <!-- View este un simplu chenar de afisare-->

    <EditText
        android:drawableLeft= "@android:drawable/ic_menu_info_details"
        android:drawableStart= "@android:drawable/ic_menu_info_details"
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_your_email_address"
        android:inputType="textEmailAddress"
        tools:ignore="autoFill"/>

    <!-- drawableLeft - iconita afisata in stanga EditTextului
        putem seta un hint =  textul care apare in SearchView inainte de a da click
        pe spatiul liber
        inputType - setam tipul de text care se va introduce pentru a ridica tastatura
        corespunzatoare tipului de text
    -->

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/i_accept_to_learn_android" />

    <!-- checked - daca casuta este bifata sau nu-->

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_yes" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/label_no" />
    </RadioGroup>

    <!-- un radio grup poate contine mai multe radioButton-uri
     RadioButton poate fi selectat o singura data-->

    <RatingBar
        android:id="@+id/rating_bar_main"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="3.5"
        android:stepSize="0.5" />

    <!-- visibility - visible; invisible; gone
        invisible - invizibil dar pastreaza ocupat spatiul in layout
        gone - invizibil dar si spatiul ocupat de element este folosit de alte elemente
     -->

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/notifications" />

    <!-- comutator
    -->

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="70" />

    <!-- bara de progres ca cea de luminozitate
        putem seta o valoarea maxima si un progres
    -->

    <SearchView
        android:queryHint="@string/this_is_a_searchview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <!-- bara de cautare
        putem seta un hint =  textul care apare in SearchView inainte de a da click
        pe spatiul liber
        inputType - setam tipul de input pentru a ridica tastatura corespunzatoare
        la momentul scrierii
    -->

    <ProgressBar
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_margin"/>

    <!-- bara de incarcare
        putem seta o vizibilitate
    -->
</LinearLayout>